// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entriesOfRecord 1`] = `Object {}`;

exports[`entriesOfRecord 2`] = `
Array [
  Array [
    "Path",
    "value of Path",
  ],
  Array [
    "path",
    "value of path",
  ],
]
`;

exports[`keysOfRecord 1`] = `Object {}`;

exports[`keysOfRecord 2`] = `
Array [
  "Path",
  "path",
]
`;

exports[`toRecord 1`] = `
Object {
  "Path": "value of Path",
  "path": "value of path",
}
`;

exports[`toRecordMap 1`] = `
Map {
  "Path" => "value of Path",
  "path" => "value of path",
}
`;
